router: PR nitpicks\n- README: use spring-boot:run and wildcard JAR; cross-platform open hints; env-based AMQ auth\n- JMS listener: isBlank check, UTF-8 byte size, cleaner error log, stronger preview masking